applications/seaweedfs/HttpRoute-seaweed-admin.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: seaweedfs.vinnysabatini.me
  labels:
    app.kubernetes.io/component: admin
    app.kubernetes.io/instance: seaweedfs
    app.kubernetes.io/name: seaweedfs
  name: seaweedfs
spec:
  hostnames:
  - seaweedfs.vinnysabatini.me
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: cluster-gateway
    namespace: kube-system
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: seaweedfs-admin
      port: 23646
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
